# mellea-playground

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/mellea_api/: __init__.py  main.py
backend/src/mellea_api/core/: __init__.py  config.py  deps.py  security.py  store.py  telemetry.py
backend/src/mellea_api/models/: __init__.py  artifact.py  assets.py  audit.py  build.py  common.py  composition_run.py  credential.py  environment.py  k8s.py  llm_metrics.py  notification.py  permission.py  retention_policy.py  run.py  run_audit.py  sharing.py  user.py
backend/src/mellea_api/routes/: __init__.py  admin.py  archive_upload.py  artifacts.py  assets.py  audit.py  auth.py  builds.py  composition_runs.py  controller.py  credentials.py  environments.py  github_import.py  health.py  llm_metrics.py  notifications.py  retention.py  run_audit.py  runs.py  (+1 more)
backend/tests/: __init__.py  conftest.py  test_artifact_collector.py  test_assets.py  test_assets_routes.py  test_audit.py  test_auth.py  test_builds_routes.py  test_credentials.py  test_email.py  test_environment.py  test_environment_builder.py  test_environments_routes.py  test_health.py  test_idle_timeout.py  test_k8s_jobs.py  test_kaniko_builder.py  test_llm_metrics_collector.py  test_mellea_integration.py  test_mellea_runtime.py  test_model_pricing.py  test_notification.py  test_permission.py  test_quota.py  test_retention_policy.py  test_run.py  test_run_audit.py  test_run_executor.py  test_run_service.py  test_runs_routes.py  test_store.py  test_warmup.py
(+228 files in other folders)
